<resources>
    <string name="app_name">Recipe Management App</string>
    <string name="intro_skip_btn">SKIP</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="full_name">Full Name</string>
    <string name="login_text">LOGIN</string>
    <string name="signup_text">SIGN UP</string>
    <string name="sandal_image1">background sandal image</string>
    <string name="startup_text">App that makes your cooking experience simpler!</string>
    <string name="intro_app_feature1">App_Feature1</string>
    <string name="intro_app_feature2">App_Feature2</string>
    <string name="intro_app_feature3">App_Feature3</string>
    <string name="intro_app_logo">app_logo</string>
    <string name="white_rectangle">White rectangle</string>
    <string name="close">Close?</string>
    <string name="exit">Exit</string>
    <string name="google">Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="timer_icon">TimerIcon</string>
    <string name="hourglass_icon">Hourglass Icon</string>
    <string name="serving_icon">Hourglass Icon</string>
    <string name="cooking_time_value">40 mins</string>
    <string name="prep_time_value">15 mins</string>
    <string name="prep_time">Prep Time</string>
    <string name="servings_value">5</string>
    <string name="servings">Servings</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="search_for_recipe">Search for recipe</string>
    <string name="method">Method</string>
    <string name="recipe_details_name">Name: </string>
    <string name="get_started">Get Started</string>
    <string name="cooking_time_edit_text">Cooking Time: </string>
    <string name="done">Done</string>
    <string name="prep_time_edit_text">Prep Time: </string>
    <string name="ingredients">Ingredients: </string>
    <string name="red_line">Red line</string>
    <string name="all_recipe">All Recipes</string>
    <string name="next">next</string>
    <string name="reset_password">Reset Password</string>
    <string name="cuisine">Cuisine: </string>
    <string name="text_logout">Log Out</string>
    <string name="text_friends">Friends</string>
    <string name="text_settings">Settings</string>
    <string name="text_profile">Profile</string>
    <string name="text_name">NAME</string>
    <string name="off">OFF</string>
    <string name="user_id">User ID</string>
    <string name="language">Language</string>
    <string name="app_version">App Version</string>
    <string name="paper_display">Paper Display</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="auto_sync">Auto Sync</string>
    <string name="change_password">Change Password</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="sign_out">Sign out</string>
</resources>