<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.StartupPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/sandal_image1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yellow_transparent_rect" />

    <Button
        android:id="@+id/get_started_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_button_white"
        android:fontFamily="sans-serif-medium"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/startup_text"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/startup_text"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/get_started_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/startupapplogo"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/startupapplogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/rounded_corner_button_white"
        android:contentDescription="@string/intro_app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/temp_app_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>